2008-11-17  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-filter-predicate): Rename from
	`isearch-success-function'.  Rename default value from
	`isearch-success-function-default' to
	`isearch-filter-invisible'.  Doc fix.
	(isearch-filter-invisible): Rename from
	`isearch-success-function-default'.  Doc fix.
	(isearch-search, isearch-lazy-highlight-search): Rename
	`isearch-success-function' to `isearch-filter-predicate'.

	* dired-aux.el (dired-isearch-filter-predicate-orig): Rename from
	`dired-isearch-orig-success-function'.
	(dired-isearch-filenames-toggle, dired-isearch-filenames-setup)
	(dired-isearch-filenames-end): Rename `isearch-success-function' to
	`isearch-filter-predicate'.  Doc fix.
	(dired-isearch-filter-filenames): Rename from
	`dired-isearch-success-function'.

	* info.el (Info-search, Info-mode): Rename
	`isearch-success-function' to `isearch-filter-predicate'.
	(Info-isearch-filter-predicate): Rename from
	`Info-search-success-function'.

	* simple.el (minibuffer-default-add-function): Fix docstring to
	use clear text "default values" instead of obscure references to
	the dynamic variable `minibuffer-default'.

2008-11-16  Glenn Morris  <rgm@gnu.org>

	* term/ns-win.el (ns-extended-platform-support-mode):
	Tweak menu entry from previous change.

	* wid-edit.el (advertised-widget-backward): Remove autoload cookie.

	* cus-edit.el (custom-buffer-create-internal): Always insert the
	in-buffer buttons, regardless of tool-bar.  (Bug#1326)

2008-11-16  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el (read-passwd): Use read-event instead of
	read-char-exclusive.

2008-11-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* ielm.el (ielm-eval-input): Fix thinko in last change.

2008-11-16  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el (read-passwd): Yank current kill if the user enters C-y.

2008-11-16  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-file-name-as-directory): New defun.